# jaist-lec-recognition-processing-engineering

./: lec2_p30.py  lec2_report.py  lec8_report.py  pyproject.toml
